--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
  <head>
-  <title> My awesome web page </title>
+  <title> 
+   My awesome web page 
+  </title>
   </Head>
  <body>
 Hello there, awesome person!
